--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A full stack all around designer that may or may not include a guide for specific creative potential methods who framing and evaluating moves."/>
+    <meta name="keywords" content="RavalRahul, Raval, Rahul, Developer, webdeveloper, programmer, ui, ux, android, database">
     <title>Raval Rahul</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style2.css">
